--- a/Test.html
+++ b/Test.html
@@ -6,13 +6,13 @@
 </head> 
 <body>
     <header></header>
-    <section id="wrapper">
-        <div class="btn_wrap previous">
-            <div class="img_wrap" onclick=""> 
-                <img src="image/previous.png" id="btn_previous" />
-            </div> 
-        </div>
-        <div id="main_container">
+    <section>
+        <div class="main_container">
+            <div class="btn_wrap previous">
+                <div class="img_wrap" onclick=""> 
+                    <img src="image/previous.png" id="btn_previous" />
+                </div> 
+            </div>
             <div id="main">
                 <div class="page-number">13/40</div>
                 <div class="text">apple</div>
@@ -24,10 +24,10 @@
                     <div class="answer item4" onclick="">토마토</div>
                 </div>
             </div>
-        </div>
-        <div class="btn_wrap next">
-            <div class="img_wrap" onclick="">
-                <img src="image/next.png" id="btn_next" />
+            <div class="btn_wrap next">
+                <div class="image_wrap" onclick="">
+                    <img src="image/next.png" id="btn_next" />
+                </div>
             </div>
         </div>
     </section>
