--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html>
 <head>
     <title>Swith</title>
-    <link rel="stylesheet" href="Index.css" type="text/css">
+    <link rel="stylesheet" href="index.css" type="text/css">
 </head>
 <body>
     <div id="conteiner">
         <header style="z-index: 3;">
-            <a href="index.html"><div id="logo"></div>
+            <a href="index.html"><div id="logo"></div></a>
             <ul class="nav">
                 <li><a href="Login.html">MY PAGE</a></li>
                 <li><a href="">TIMER</a></li>
@@ -36,34 +35,4 @@
     <footer>
     </footer>
 </body>
-=======
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Swith</title>
-    <link rel="stylesheet" href="Index.css" type="text/css">
-</head>
-<body>
-    <div id="conteiner">
-        <header>
-            <h1>LOGO</h1>
-            <ul class="nav">
-                <li><a href="Login.html">MY PAGE</a></li>
-                <li><a href="">TIMER&SELF-STUDY</a></li>
-                <li><a href="">STUDY CARD</a></li>
-            </ul>
-        </header>
-        <div id="main">
-            <div class="main_center">
-            </div>
-            <div class="study_img">
-            </div>
-            <div class="timer_img">
-            </div>
-        </div>
-    </div>
-    <footer>
-    </footer>
-</body>
->>>>>>> 732fd5d2d91ebc566412170274dd70c8f3a4d99d
 </html>
