--- a/MakingVocabulary.html
+++ b/MakingVocabulary.html
@@ -7,6 +7,7 @@
 <body>
 	<div id="container">
 		<div class="header">
+			<a href="index.html"><img src="image/logo.png"></a>
             <ul class="nav">                
                 <li><a href="">MY PAGE</a></li>
                 <li><a href="">TIMER</a></li>
