--- a/MyPage.html
+++ b/MyPage.html
@@ -7,33 +7,59 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Swith</title>
     <link rel="stylesheet" href="MyPage.css" type="text/css">
-    <script src="profile.js"></script>
+    <script src="profile.js" type="text/javascript"></script>
 </head>
 
 <body>
-    <div id="conteiner">
+    <div id="container">
         <header>
-            <div id="logo">
-            </div>
+            <a href="index.html"><img src="image/logo.png"></a>
             <ul class="nav">
-                <li><a href="">TIMER&SELF-STUDY</a></li>
-                <li><a href="">STUDY CARD</a></li>
-                <li><a href="index.html">HOME</a></li>
+                <li><a href="Login.html">MY PAGE</a></li>
+                <li><a href="">TIMER</a></li>
+                <li><a href="">STUDY</a></li>
+                <li><a href="">HOME</a></li>
             </ul>
         </header>
         <div id="main">
-            <div class="section">
-            </div>
-            <div class="line">
+            <div class="main_left">
                 <div class="profile">
                     <div id="image_container"></div>
                 </div>
                 <div id ="findbtn">
-                <input type="file" id="image" accept="image/*" onchange="setThumbnail(event);" /></div>
+                    <input type="file" id="image" accept="image/*" onchange="setThumbnail(event);"/>
+                </div>
+            </div>
+            <div id="main_middle"></div>
+            <div class="main_right">
+                <p>닉네임</p>
+                <input type="text" name="name" style="width: 150px;">
+                <p>아이디</p>
+                <input type="text" name="id" placeholder="LoremIpsum@LoremIpsum">
+                <p>비밀번호</p>
+                <input type="password" name="password" placeholder="비밀번호를 입력하세요">
+                <p>생년월일</p>
+                <select id="year">
+                    <option>선택하세요</option>
+                </select>년
+                <select id="month">
+                    <option>선택하세요</option>
+                </select>월
+                <select id="day">
+                    <option>선택하세요</option>
+                </select>일
+                <br>
+                <input type="button" id="save" value="저장" style="float: right;">
+                <br>
+                <input type="button" id="myword" value="내가 만든 단어장">
+                <br>
+                <input type="button" id="mystudy" value="내 공부 기록">
             </div>
          </div>
      </div>
     <footer>
+        <img src="image/footer_logo.png">
+        <p>이민지/문진진/최지원/최가흔</p>
     </footer>
 </body>
 </html>
