--- a/timer.html
+++ b/timer.html
@@ -14,6 +14,7 @@
             <h1>01 : 23 : 45</h1>
             <hr>
             <p>총 공부시간 03 : 54 : 23</p>
+            <img src="image/stop.png">
         </div>
     </div>
 </body>
