--- a/Making.html
+++ b/Making.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="utf-8">
     <title>Swith</title>
     <link rel="stylesheet" href="Making.css" type="text/css"> 
 </head>
