--- a/SignUp.html
+++ b/SignUp.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html>
+
 <head>
+	<meta charset="utf-8">
 	<title>Swith</title>
 	<link rel="stylesheet" href="SignUp.css" type="text/css">
 </head>
+
 <body>
 	<div id="main">
 		<div class="header">
-			<div class = "sign_title">
+			<div class="sign_title">
+				<img src="image/logo.png" alt="logo">
 				<h1>회원가입</h1>
-			</div>
-			<div class = "logo">
 			</div>
 		</div>
 		<hr class="header_line" />
@@ -28,22 +30,24 @@
 				</ul>
 			</div>
 			<div class="height_line"></div>
-			<div class = "text_field">
-				<input type="text" name="id" /><br/>
-				<input type="password" name="pw" /><br/>
-				<input type="password" name="pw_re" /><br/>
-				<input type="text" name="name" /><br/>
+			<div class="text_field">
+				<input type="text" name="id" /><br />
+				<input type="password" name="pw" /><br />
+				<input type="password" name="pw_re" /><br />
+				<input type="text" name="name" /><br />
+
+				<input type="text" name="year" /> 년&nbsp;
+				<input type="text" name="month" /> 월&nbsp;
+				<input type="text" name="day" /> 일&nbsp;
 			</div>
-			<div class = "text_field2">
-				<input type="text" name="year"/>&nbsp;	년&nbsp;	&nbsp;&nbsp;&nbsp;			
-				<input type="text" name="month" />&nbsp;	월&nbsp;	&nbsp;	
-				<input type="text" name="day" />&nbsp;	일&nbsp;	&nbsp;	
+			<div class="btn">
+				<input type="submit" name="btn_sign_up" value="회원가입">
+			</div>
 		</div>
-		<div class = "btn">
-			<input type="submit" name="btn_sign_up" value="회원가입">
-		</div>
-	</div>
-	<footer>
- 	</footer>
+		<footer>
+			<img src="image/footer_logo.png">
+			<p>이민지/문진진/최지원/최가흔</p>
+		</footer>
 </body>
+
 </html>
