--- a/Login.html
+++ b/Login.html
@@ -1,31 +1,37 @@
 <!DOCTYPE html>
 <html>
+
 <head>
+	<meta charset="utf-8">
 	<title>Swith</title>
 	<link rel="stylesheet" href="Login.css" type="text/css">
 </head>
+
 <body>
 	<div id="main">
-		<div class = "logo">
-			<a href="index.html">경  nct지성❤이민지 축</a>
+		<div class="logo">
+			<img src="image/logo.png" alt="logo">
 		</div>
-		<div class = "text_field">
-			<input type="text" name="id"></br>
-			<input type="password" name="pw">
+		<div class="text_field">
+			<input type="text" name="id" placeholder="아이디">
+			<input type="password" name="pw" placeholder="비밀번호">
 		</div>
-		<div class = "btn">
-			<input type="submit" name="sign in"  value="로그인"></br>
-			<input type="submit" name="sign up"  value="회원가입" onClick="location.href='SignUp.html'">
+		<div class="btn">
+			<input type="submit" name="sign in" value="로그인">
 		</div>
 		<ul class="forgot">
-		    <li><a href="">아이디 또는 비밀번호 찾기</a></li>
+			<li>아직 계정이 없다면? <a href="SignUp.html">회원가입</a></li>
+			<li>기억나지 않아요! <a href="">아이디</a> / <a href="">비밀번호 찾기</a></li>
 		</ul>
-		<div class = "btn2">
-			<input type="submit" name="naver"  value="네이버"></br>
-			<input type="submit" name="google"  value="구글">
+		<div class="btn2">
+			<input type="submit" name="google" value="       Google로 로그인">
+			<input type="submit" name="naver" value="       Naver로 로그인">
 		</div>
 	</div>
 	<footer>
- 	</footer>
+		<img src="image/footer_logo.png">
+		<p>이민지/문진진/최지원/최가흔</p>
+	</footer>
 </body>
+
 </html>
