--- a/SignIUp.html
+++ b/SignIUp.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
 	<title>Swith</title>
-</head>
-<body>
-<head>
-    <title>Swith</title>
     <link rel="stylesheet" href="SignUp.css" type="text/css">
 </head>
+<body>
+	
 </body>
 </html>
