--- a/Test.html
+++ b/Test.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="utf-8">
     <title>Swith</title>
     <link rel="stylesheet" href="Test.css" type="text/css"/>
 </head> 
