--- a/timer.html
+++ b/timer.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
+
 <head>
+    <meta charset="utf-8">
     <title>Swith</title>
     <link rel="stylesheet" href="timer.css" type="text/css">
 </head>
+
 <body>
     <div id="container">
         <header>
-            <p><span style="font-size: 25px;">&lt;</span> 돌아가기</p>
+            <p><span style="font-size: 25px;">&lt;</span> Home</p>
             <p>수학 <span style="font-size: 25px;">&or;</span></p>
         </header>
         <div class="main">
@@ -18,4 +21,5 @@
         </div>
     </div>
 </body>
+
 </html>
