--- a/Making.html
+++ b/Making.html
@@ -15,7 +15,7 @@
                 <a href="Memorize.html">&lt; 돌아가기</a>
             </div>
             <div class="item2">
-                <input type="text" name="title" id="title" placeholder="제목을 입력하세요" size="35"/>
+                <input type="text" name="title" id="title" placeholder="제목을 입력하세요"/>
             </div>
         </div>
     </header>
