--- a/timer.html
+++ b/timer.html
@@ -10,14 +10,17 @@
 <body>
     <div id="container">
         <header>
-            <p><span style="font-size: 25px;">&lt;</span> Home</p>
+            <a href="index.html">
+                <p><span style="font-size: 25px;">&lt;</span> Home</p>
+            </a>
             <p>수학 <span style="font-size: 25px;">&or;</span></p>
         </header>
         <div class="main">
             <h1>01 : 23 : 45</h1>
             <hr>
             <p>총 공부시간 03 : 54 : 23</p>
-            <img src="image/stop.png">
+            <button id="pause"></button>
+            <button id="save">기록하기</button>
         </div>
     </div>
 </body>
