--- a/Login.html
+++ b/Login.html
@@ -10,28 +10,27 @@
 <body>
 	<div id="main">
 		<div class="logo">
-			<img src="image/logo.png" alt="logo">
+			<a href="index.html">
+				<img src="image/logo.png" alt="logo">
+			</a>
 		</div>
 		<div class="text_field">
 			<input type="text" name="id" placeholder="아이디">
 			<input type="password" name="pw" placeholder="비밀번호">
 		</div>
 		<div class="btn">
-			<input type="submit" name="sign in" value="로그인">
+			<input type="submit" name="sign in" value="로그인" onclick="">
 		</div>
 		<ul class="forgot">
 			<li>아직 계정이 없다면? <a href="SignUp.html">회원가입</a></li>
 			<li>기억나지 않아요! <a href="">아이디</a> / <a href="">비밀번호 찾기</a></li>
 		</ul>
+		<hr>
 		<div class="btn2">
 			<input type="submit" name="google" value="       Google로 로그인">
 			<input type="submit" name="naver" value="       Naver로 로그인">
 		</div>
 	</div>
-	<footer>
-		<img src="image/footer_logo.png">
-		<p>이민지/문진진/최지원/최가흔</p>
-	</footer>
 </body>
 
 </html>
