--- a/MyPage.html
+++ b/MyPage.html
@@ -3,11 +3,11 @@
 
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Swith</title>
     <link rel="stylesheet" href="MyPage.css" type="text/css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="profile.js" type="text/javascript"></script>
+    <script src="MyPage.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -57,7 +57,7 @@
                 <br>
                 <input type="button" id="save" value="저장" style="float: right;">
                 <br>
-                <input type="button" id="myword" value="내가 만든 단어장">
+                <input type="button" id="myword" value="내가 만든 단어장" onclick="location.href='Vocabulary.html'">
                 <br>
                 <input type="button" id="mystudy" value="내 공부 기록">
             </div>
