--- a/SignUp.html
+++ b/SignUp.html
@@ -5,13 +5,15 @@
 	<meta charset="utf-8">
 	<title>Swith</title>
 	<link rel="stylesheet" href="SignUp.css" type="text/css">
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+	<script src="SignUp.js" type="text/javascript"></script>
 </head>
 
 <body>
 	<div id="main">
 		<div class="header">
 			<div class="sign_title">
-				<img src="image/logo.png" alt="logo">
+				<a href="index.html"><img src="image/logo.png" alt="logo"></a>
 				<h1>회원가입</h1>
 			</div>
 		</div>
@@ -30,24 +32,26 @@
 				</ul>
 			</div>
 			<div class="height_line"></div>
-			<div class="text_field">
+			<form name="text_field" class="text_field" action="index.html">
 				<input type="text" name="id" /><br />
 				<input type="password" name="pw" /><br />
 				<input type="password" name="pw_re" /><br />
 				<input type="text" name="name" /><br />
 
-				<input type="text" name="year" /> 년&nbsp;
-				<input type="text" name="month" /> 월&nbsp;
-				<input type="text" name="day" /> 일&nbsp;
-			</div>
+				<select id="year">
+					<option>선택하세요</option>
+				</select>년
+				<select id="month" onchange="lastday();">
+					<option>선택하세요</option>
+				</select>월
+				<select id="day">
+					<option>선택하세요</option>
+				</select>일
+			</form>
 			<div class="btn">
-				<input type="submit" name="btn_sign_up" value="회원가입">
+				<a href="index.html"><input type="submit" name="btn_sign_up" value="회원가입"></a>
 			</div>
 		</div>
-		<footer>
-			<img src="image/footer_logo.png">
-			<p>이민지/문진진/최지원/최가흔</p>
-		</footer>
 </body>
 
 </html>
