--- a/Login.html
+++ b/Login.html
@@ -11,7 +11,7 @@
 	<div id="main">
 		<div class="logo">
 			<a href="index.html">
-				<img src="image/logo.png" alt="logo">
+				<img src="image/logo_big.png" alt="logo">
 			</a>
 		</div>
 		<div class="text_field">
