--- a/Making.html
+++ b/Making.html
@@ -13,7 +13,7 @@
     <header>
         <div id="header_container">
             <div class="item1">
-                <a href="Memorize.html">&lt; 돌아가기</a>
+                <a onclick="history.back()">&lt; 돌아가기</a>
             </div>
             <div class="item2">
                 <input type="text" name="title" id="title" placeholder="제목을 입력하세요" />
