--- a/MyPage.html
+++ b/MyPage.html
@@ -30,10 +30,12 @@
         <div id="main">
             <div class="main_left">
                 <div class="profile">
-                    <div id="image_container"></div>
+                    <div id="image_container">
+                        <img id="img" />
+                    </div>
                 </div>
                 <div id="findbtn">
-                    <input type="file" id="image" accept="image/*" onchange="setThumbnail(event);" />
+                    <input type="file" id="input_img" />
                 </div>
             </div>
             <div id="main_middle"></div>
