--- a/SignUp.html
+++ b/SignUp.html
@@ -13,7 +13,7 @@
 	<div id="main">
 		<div class="header">
 			<div class="sign_title">
-				<a href="index.html"><img src="image/logo.png" alt="logo"></a>
+				<a href="index.html"><img src="image/logo_big.png" alt="logo"></a>
 				<h1>회원가입</h1>
 			</div>
 		</div>
@@ -32,7 +32,7 @@
 				</ul>
 			</div>
 			<div class="height_line"></div>
-			<form name="text_field" class="text_field" action="index.html">
+			<form name="text_field" class="text_field" method="POST" action="index.html">
 				<input type="text" name="id" /><br />
 				<input type="password" name="pw" /><br />
 				<input type="password" name="pw_re" /><br />
