--- a/Vocabulary.html
+++ b/Vocabulary.html
@@ -14,7 +14,7 @@
 		<header style="z-index: 3;">
 			<a href="index.html">
 				<div id="logo" style="max-width: 1200px;">
-					<img src="image/logo.png">
+					<img src="image/logo_big.png">
 				</div>
 			</a>
 			<nav>
