--- a/Memorize.html
+++ b/Memorize.html
@@ -14,7 +14,7 @@
 		<header style="z-index: 3;">
 			<a href="index.html">
 				<div id="logo" style="max-width: 1200px;">
-					<img src="image/logo.png">
+					<img src="image/logo_big.png">
 				</div>
 			</a>
 			<nav>
@@ -40,7 +40,7 @@
 					<a href="#">
 						<div>카드게임</div>
 					</a>
-					<a href="#">
+					<a href="Test.html">
 						<div>테스트</div>
 					</a>
 				</div>
