--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header style="z-index: 3;">
             <a href="index.html">
                 <div id="logo" style="max-width: 1200px;">
-                    <img src="image/logo.png">
+                    <img src="image/logo_big.png">
                 </div>
             </a>
             <nav>
@@ -111,7 +111,5 @@
                             </section>
                         </main>
                     </body>
-
-</html>
 
 </html>
