--- a/Calendar.html
+++ b/Calendar.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-
 <head>
+    <meta charset="utf-8">
     <title>Swith</title>
     <script src="Calendar.js"></script>
     <link rel="stylesheet" href="Calendar.css" type="text/css">
@@ -23,27 +23,31 @@
             </nav>
     </header>
 
-<table id="calendar" align="center">
-    <tr>
-        <td class="arrow"><label onclick="prevCalendar()"><img src="image/arrow_left.png"></label></td>
-        <td align="center" id="tbCalendarYM" colspan="5">
-        yyyy년 m월</td>
-        <td class="arrow"><label onclick="nextCalendar()"><img src="image/arrow_right.png">            
-        </label></td>
-    </tr>
-    <tr>
-        <td class="day" align="center">SUN</td>
-        <td class="day"align="center">Mon</td>
-        <td class="day"align="center">Tue</td>
-        <td class="day"align="center">Wed</td>
-        <td class="day"align="center">Thu</td>
-        <td class="day"align="center">Fri</td>
-        <td class="day"align="center">Sat</td>
-    </tr> 
-</table>
+    <table id="calendar" align="center">
+        <tr>
+            <td class="arrow"><label onclick="prevCalendar()"><img src="image/arrow_left.png"></label></td>
+            <td align="center" id="tbCalendarYM" colspan="5">
+            yyyy년 m월</td>
+            <td class="arrow"><label onclick="nextCalendar()"><img src="image/arrow_right.png">            
+            </label></td>
+        </tr>
+        <tr>
+            <td class="day" align="center">SUN</td>
+            <td class="day"align="center">Mon</td>
+            <td class="day"align="center">Tue</td>
+            <td class="day"align="center">Wed</td>
+            <td class="day"align="center">Thu</td>
+            <td class="day"align="center">Fri</td>
+            <td class="day"align="center">Sat</td>
+        </tr> 
+    </table>
 
 <section style="overflow: auto;">  
-  <h1 id="today">4월 22일</h1>
+ 
+<table id="calendar2">
+        <th id="tbCalendarMD" colspan="7">
+        m월 dd일</th>
+</table>
   <hr id="date">
   <div id ="box1">
     <div id="container1">
