--- a/Calendar.html
+++ b/Calendar.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Swith</title>
     <script src="Calendar.js"></script>
+    <script type="text/javascript" src="timer.js"></script>
     <link rel="stylesheet" href="Calendar.css" type="text/css">
 
 </head>
@@ -52,12 +53,18 @@
   <div id ="box1">
     <div id="container1">
         <div class="record">
+            <h1 class = time_record>00:00:00</h1>
+            <div class="one">
             <div class="circle"></div><h1 id="subject">수학</h1>
+            </div>
         </div>
     </div>
     <div id="container2">
         <div class="record">
-            <div class="circle"></div><h1 id="subject">영어</h1>
+            <h1 class = time_record>00:00:00</h1>
+            <div class="one">
+                <div class="circle"></div><h1 id="subject">영어</h1>
+            </div>
         </div>
     </div>
 </div>
