--- a/Making.html
+++ b/Making.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
     <meta charset="utf-8">
     <title>Swith</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="Making.js"></script>
+    <script src="http://localhost/2021-swith/2021-swith/Making.js?ver=1" type="text/javascript"></script>
     <link rel="stylesheet" href="Making.css" type="text/css">
 </head>
 
