--- a/timer.html
+++ b/timer.html
@@ -1,33 +1,20 @@
 <!DOCTYPE html>
 <html>
+
 <head>
+    <meta charset="utf-8">
     <title>Swith</title>
     <link rel="stylesheet" href="timer.css" type="text/css">
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script type="text/javascript" src="timer.js"></script>
 </head>
+
 <body>
     <div id="container">
         <header>
-            <a href="index.html">
-                <p><span style="font-size: 25px;">&lt;</span> Home</p>
-            </a>
-            <p>수학 <span style="font-size: 25px;">&or;</span></p>
-        </header>
-        <div class="main">
-            <h1>01 : 23 : 45</h1>
-            <hr>
-            <p>총 공부시간 03 : 54 : 23</p>
-            <button id="pause"></button>
-            <button id="save">기록하기</button>
-            <p><span style="font-size: 25px;"></span><a href="index.html"> < Home</p></a>
-            <select>
-                <option subject>subject  ▽</option>
-                <option>국어 </option>
-                <option>영어</option>
-                <option>수학</option>
-            </select>
+            <p><span style="font-size: 25px;"></span><a href="index.html"> &lt; Home</p></a>
         </header>
         <div id='box' class="box">
             <div id='timerBox' class="timerBox">
@@ -42,4 +29,5 @@
         </div>
     </div>
 </body>
+
 </html>
