--- a/Vocabulary.html
+++ b/Vocabulary.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<title>Swith</title>
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-	<link rel="stylesheet" href="Vocabulary.css" type="text/css">
+	<link rel="stylesheet" href="http://localhost/2021-swith/2021-swith/Vocabulary.css?ver=2" type="text/css">
 	<script src="https://kit.fontawesome.com/8eb5905426.js" crossorigin="anonymous"></script>
 </head>
 
@@ -32,15 +32,17 @@
 				<ul class="listul">
 					<li class="group">
 						<div class="title">
+							<img src="image/folder.png" />
 							<a href="MakingVocabulary.html">
-								<img src="image/folder.png" />영어
+								영어
 							</a>
 						</div>
 					</li>
 					<li class="group">
 						<div class="title">
+							<img src="image/folder.png" />
 							<a href="#">
-								<img src="image/folder.png" />한국사
+								한국사
 							</a>
 						</div>
 					</li>
@@ -48,9 +50,12 @@
 				<p id="new"><a href="Making.html">+새로 만들기</a></p>
 				<ul class="listul_two">
 					<li class="group">
-						<a href="#">
-							<div class="title"><img src="image/folder.png" />일본어</div>
-						</a>
+						<div class="title">
+							<img src="image/folder.png" />
+							<a href="#">
+								일본어
+							</a>
+						</div>
 					</li>
 				</ul>
 			</div>
