--- a/MakingVocabulary.html
+++ b/MakingVocabulary.html
@@ -4,9 +4,9 @@
 <head>
 	<meta charset="utf-8">
 	<title>Swith</title>
-	<link rel="stylesheet" href="MakingVocabulary.css" type="text/css">
+	<link rel="stylesheet" href="http://localhost/2021-swith/2021-swith/MakingVocabulary.css?ver=1" type="text/css">
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-	<script src="MakingVocabulary.js"></script>
+	<script src="http://localhost/2021-swith/2021-swith/MakingVocabulary.js?ver=1"></script>
 </head>
 
 <body>
@@ -36,7 +36,10 @@
 				<ul class="listul">
 
 					<li class="group">
-						<div class="title"><img src="image/folder.png" />영어</div>
+						<div class="title">
+							<img src="image/folder.png" />
+							<p>영어</p>
+						</div>
 						<ul class="sub">
 							<li>
 								<div style="float: left;"></div><a href="Memorize.html">1단원</a>
@@ -48,7 +51,10 @@
 					</li>
 
 					<li class="group">
-						<div class="title"><img src="image/folder.png" />한국사</div>
+						<div class="title">
+							<img src="image/folder.png" />
+							<p>한국사</p>
+						</div>
 					</li>
 				</ul>
 
@@ -86,6 +92,15 @@
 						추가하기
 					</li>
 				</a>
+			</div>
+
+			<div class="modal">
+				<div class="modal_content">
+					<span class="close">&times;</span>
+					<p>단원 목록에서 삭제하시겠습니까?</p>
+					<button class="btn_no">취소</button>
+					<button class="btn_ok">확인</button>
+				</div>
 			</div>
 		</div>
 		<footer>
