--- a/Making.html
+++ b/Making.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>Swith</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="http://localhost/2021-swith/2021-swith/Making.js?ver=1" type="text/javascript"></script>
+    <script src="Making.js" type="text/javascript"></script>
     <link rel="stylesheet" href="Making.css" type="text/css">
 </head>
 
