--- a/MakingVocabulary.html
+++ b/MakingVocabulary.html
@@ -4,9 +4,9 @@
 <head>
 	<meta charset="utf-8">
 	<title>Swith</title>
-	<link rel="stylesheet" href="http://localhost/2021-swith/2021-swith/MakingVocabulary.css?ver=1" type="text/css">
+	<link rel="stylesheet" href="MakingVocabulary.css" type="text/css">
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-	<script src="http://localhost/2021-swith/2021-swith/MakingVocabulary.js?ver=1"></script>
+	<script src="MakingVocabulary.js"></script>
 </head>
 
 <body>
