--- a/SignUp.html
+++ b/SignUp.html
@@ -28,24 +28,24 @@
 					<li>비밀번호 확인</li>
 
 					<li>이름</li>
+
 					<li>생년월일</li>
 				</ul>
 			</div>
 			<div class="height_line"></div>
-			<form name="text_field" class="text_field" method="POST"
-				action="http://localhost/2021-swith/2021-swith/SignUp.php">
+			<form name="text_field" class="text_field" method="POST" action="SignUp.php">
 				<input type="text" name="id" id="id" /><br />
 				<input type="password" name="pw" id="pw" /><br />
 				<input type="password" name="pw_re" id="pw_re" /><br />
 				<input type="text" name="name" id="name" /><br />
 
-				<select id="year">
+				<select name="year" id="year">
 					<option>선택하세요</option>
 				</select>년
-				<select id="month" onchange="lastday();">
+				<select name="month" id="month" onchange="lastday();">
 					<option>선택하세요</option>
 				</select>월
-				<select id="day">
+				<select name="day" id="day">
 					<option>선택하세요</option>
 				</select>일
 			</form>
