--- a/Vocabulary.html
+++ b/Vocabulary.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<title>Swith</title>
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-	<link rel="stylesheet" href="http://localhost/2021-swith/2021-swith/Vocabulary.css?ver=2" type="text/css">
+	<link rel="stylesheet" href="Vocabulary.css" type="text/css">
 	<script src="https://kit.fontawesome.com/8eb5905426.js" crossorigin="anonymous"></script>
 </head>
 
